# leglag

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
leglag/: __init__.py  dft.py  dispersion.py  moller_plesset.c  moller_plesset.pyx  one_d_domain.py  one_d_molecule.py  one_e_integrals.py  two_e_integrals.c  two_e_integrals.pyx  utilities.c  utilities.pyx
leglag_tests/: conftest.py  test_known_molecules.py  test_one_e_integrals.py  test_spatial_invariants.py  utilities.py
leglag_tests/one_e_integrals/: test_finite_field.py  test_finite_kinetic.py  test_finite_potential.py  test_infinite_field.py  test_infinite_kinetic.py  test_inifinite_potential.py
leglag_tests/published_results/: test_atomic_energies.py  test_diatomic_energies.py
leglag_tests/spatial_invariants/: test_inversions.py  test_translations.py
