[metadata]
name = leglag
version = attr:leglag.__version__
description = LegLag is an electronic structure package for 1D molecules
long_description = file:README.md
author = Caleb Ball
author_email = caleb.ball@explain.com.au

[options]
packages = find:
install_requires =
  numpy
  scipy
zip_safe = False

[options.package_data]
leglag = "integral_data/*.dat"
