[metadata]
name = leglag
version = attr:leglag.__version__
description = LegLag is an electronic structure package for 1D molecules
long_description = file:README.md
long_description_content_type = text/markdown
author = Caleb Ball
author_email = caleb.ball@explain.com.au
url = https://github.com/calebball/leglag
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Cython
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
  numpy
  scipy
zip_safe = False

[options.package_data]
leglag =
  integral_data/*.dat
